--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.1.0-",
     "gsap": "^3.11.5",
     "rxjs": "~6.6.0",
+    "three": "^0.154.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
