--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "rxjs": "~6.6.0",
     "three": "^0.154.0",
     "tslib": "^2.2.0",
+    "typed-js": "^0.2.3",
+    "typed.js": "^2.0.16",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
