--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "16": "^0.0.2",
     "@angular/animations": "~12.1.0-",
     "@angular/common": "~12.1.0-",
     "@angular/compiler": "~12.1.0-",
@@ -24,6 +25,7 @@
     "tslib": "^2.2.0",
     "typed-js": "^0.2.3",
     "typed.js": "^2.0.16",
+    "webpack": "^5.89.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
