--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "private": true,
   "dependencies": {
     "16": "^0.0.2",
-    "@angular/animations": "~12.1.0-",
-    "@angular/common": "~12.1.0-",
-    "@angular/compiler": "~12.1.0-",
-    "@angular/core": "~12.1.0-",
-    "@angular/forms": "~12.1.0-",
-    "@angular/platform-browser": "~12.1.0-",
-    "@angular/platform-browser-dynamic": "~12.1.0-",
-    "@angular/router": "~12.1.0-",
+    "@angular/animations": "^14.3.0",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
     "gsap": "^3.11.5",
     "rxjs": "~6.6.0",
     "three": "^0.154.0",
@@ -29,9 +29,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.3",
-    "@angular/cli": "~12.1.3",
-    "@angular/compiler-cli": "~12.1.0-",
+    "@angular-devkit/build-angular": "^14.2.13",
+    "@angular/cli": "^14.2.13",
+    "@angular/compiler-cli": "^14.3.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
